@@ -1,4 +1,4 @@
-## Copyright (C) 2008, 2009, 2010, 2011, 2012 Moreno Marzolla
+## Copyright (C) 2012 Moreno Marzolla
 ##
 ## This file is part of the queueing toolbox.
 ##
@@ -17,64 +17,27 @@
 
 ## -*- texinfo -*-
 ##
-## @deftypefn {Function File} {[@var{Xu}, @var{Rl}, @var{Ru}] =} qnopenbsb (@var{lambda}, @var{D})
+## @deftypefn {Function File} {[@var{Xl} @var{Xu}, @var{Rl}, @var{Ru}] =} qnopenbsb (@var{lambda}, @dots{})
 ##
 ## @cindex bounds, balanced system
 ## @cindex open network
 ##
-## Compute Balanced System Bounds for single-class, open Queueing Networks
-## with @math{K} service centers.
+## Compute Balanced System Bounds for open Queueing Networks. 
+## This function delegates actual computation to @code{qnopensinglebsb}.
 ##
-## @strong{INPUTS}
-##
-## @table @var
-##
-## @item lambda 
-## overall arrival rate to the system (scalar). Abort if
-## @code{@var{lambda} < 0 }
-##
-## @item D 
-## @code{@var{D}(k)} is the service demand at center @math{k}.
-## The service demand vector @var{D} must be nonempty, and all demands
-## must be nonnegative (@code{@var{D}(k) @geq{} 0} for all @math{k}).
-##
-## @end table
-##
-## @strong{OUTPUTS}
-##
-## @table @var
-##
-## @item Xl
-## Lower bound on the system throughput.
-##
-## @item Rl
-## @itemx Ru
-## Lower and upper bound on the system response time.
-##
-## @end table
-##
-## @seealso{qnopenab}
+## @seealso{qnopensinglebsb}
 ## 
 ## @end deftypefn
 
 ## Author: Moreno Marzolla <marzolla(at)cs.unibo.it>
 ## Web: http://www.moreno.marzolla.name/
 
-function [X_upper R_lower R_upper] = qnopenbsb( lambda, D )
-  if ( nargin != 2 )
-    print_usage();
+function [Xl Xu Rl Ru] = qnopenbsb( lambda, varargin )
+  if ( isscalar(lambda) )
+    [Xl Xu Rl Ru] = qnopensinglebsb( lambda, varargin{:} );
+  else
+    error("This function does not support multiclass networks yet");
   endif
-  ( isscalar(lambda) && lambda>0 ) || \
-      error( "lambda must be a positive scalar" );
-  ( isvector(D) && length(D)>0 && all(D>=0) ) || \
-      error( "D must be a vector of nonnegative floats" );
-
-  D_max = max(D);
-  D_tot = sum(D);
-  D_ave = mean(D_tot);
-  X_upper = 1/D_max;
-  R_lower = D_tot / (1-lambda*D_ave);
-  R_upper = D_tot / (1-lambda*D_max);
 endfunction
 
 %!test
